# rust-intro-web

./: .gitignore  .gitmodules  README.md
app/part1/: Cargo.toml
app/part1/src/: main.rs
app/part2/src/: error.rs  main.rs
app/part2/src/data/: mod.rs
app/part2/src/models/: movie.rs
app/part2/src/routes/: mod.rs  movie.rs
app/part3/: Cargo.toml  Postgres.Dockerfile
app/part3/src/: error.rs  main.rs
app/part3/src/data/: mod.rs
app/part3/src/models/: movie.rs
app/part3/src/routes/: mod.rs  movie.rs
app/solution_proposal/: README.md  init.sql
app/solution_proposal/src/: error.rs  main.rs
app/solution_proposal/src/data/: mod.rs
app/solution_proposal/src/extractors/: mod.rs
app/solution_proposal/src/models/: mod.rs  movie.rs
app/solution_proposal/src/routes/: mod.rs  movie.rs
