[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.23", features = ["serde"] }
hyper = "0.14.24"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
